# infoclimat-pipelines

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: CLAUDE.md
.claude/rules/: architecture.md  arome-om-forecast.md  ci-workflows.md  doc-and-conventions.md  omfile-and-r2.md  python-scripts.md  rust-conventions.md  temperature-anomaly.md
.github/workflows/: arome-om-forecast.yml  ci.yml  temperature-anomaly-climatology.yml  temperature-anomaly-forecast.yml  temperature-anomaly-observed.yml
crates/arome-om-forecast/: Cargo.toml
crates/arome-om-forecast/src/: cumul.rs  grib_decoder.rs  lib.rs  main.rs  planning.rs  variables.rs
crates/core/: Cargo.toml
crates/core/src/: accumulation.rs  anomaly.rs  anomaly_metadata.rs  arome_om_metadata.rs  climatology.rs  grid.rs  lib.rs  logging.rs  meteofrance_api.rs  omfile_io.rs  r2.rs  regrid.rs
crates/core/tests/: climatology_test.rs  grid_test.rs  omfile_io_test.rs  regrid_test.rs
crates/temperature-anomaly-climatology/: Cargo.toml
crates/temperature-anomaly-climatology/src/: build.rs  lib.rs  main.rs  netcdf.rs
crates/temperature-anomaly-climatology/tests/: build_test.rs  netcdf_test.rs
crates/temperature-anomaly-forecast/: Cargo.toml
crates/temperature-anomaly-forecast/src/: lib.rs  main.rs  openmeteo.rs
crates/temperature-anomaly-forecast/tests/: openmeteo_test.rs
crates/temperature-anomaly-observed/: Cargo.toml
crates/temperature-anomaly-observed/src/: cds.rs  lib.rs  main.rs
docs/superpowers/plans/: 2026-05-28-arome-om-forecast.md  2026-05-28-arome-om-precipitation-sum.md
docs/superpowers/specs/: 2026-05-28-arome-om-forecast-design.md  2026-05-28-arome-om-precipitation-sum-design.md
scripts/: build_climatology.sh  decode_arome_om_grib.py  download_era5.py  download_era5_parallel.sh  requirements.txt
