[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/temperature-anomaly-climatology",
    "crates/temperature-anomaly-observed",
    "crates/temperature-anomaly-forecast",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Internal
pipeline-core = { path = "crates/core" }

# OMfile io
omfiles = { git = "https://github.com/open-meteo/rust-omfiles", branch = "main" }
ndarray = "0.17"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
bytes = "1"

# S3 / R2
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serde/time/errors/logs
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"

# NetCDF (climato only)
netcdf = "0.10"
