[package]
name = "pipeline-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
omfiles.workspace = true
ndarray.workspace = true
reqwest.workspace = true
bytes.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[lints]
workspace = true
