[package]
name = "temperature-anomaly-forecast"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "temperature_anomaly_forecast"
path = "src/lib.rs"

[[bin]]
name = "temperature-anomaly-forecast"
path = "src/main.rs"

[dependencies]
pipeline-core.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
ndarray.workspace = true
reqwest.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dotenvy.workspace = true
omfiles.workspace = true

[lints]
workspace = true
