[package]
name = "temperature-anomaly-observed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "temperature_anomaly_observed"
path = "src/lib.rs"

[[bin]]
name = "temperature-anomaly-observed"
path = "src/main.rs"

[dependencies]
pipeline-core.workspace = true
temperature-anomaly-climatology = { path = "../temperature-anomaly-climatology" }
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dotenvy.workspace = true

[lints]
workspace = true
